[package]
name = "mlflow_rs"
version = "0.1.6"
edition = "2021"
license = "Apache-2.0"
description = "A client library for experiment tracking with MLflow."
repository = "https://github.com/PhilWun/mlflow-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
log = { version = "0.4", features = ["std"] }
chrono = { version = "0.4" }
ctrlc = { version = "3.4" }
thiserror = { version = "1.0"}
bincode = { version = "1.3" }
